# D.L

./: .env  .env.example  .gitignore  .solhint.json  =1.1  =1.5  =14.0  =3.1  Dockerfile  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  TERMUX_FLASHLOAN_GUIDE.md  aave_flashloan.py  aave_flashloan_executor.py  aave_flashloan_real.py  aave_flashloan_test.py  aureon_onthedl.py  aureon_server.py  auto_trader_testnet.py  auto_trader_trustwallet.py  base44_test.py  blockchain_aureon.py  build.py  check_balance.py  compiler.py  config.py  database.py  deploy.sh  deploy_flashloan.py  docker-compose.yml  executor.py  flash_loan_bot.py  flashloan_terminal.py  generate_wallet.py  main.py  pytest.ini  requirements-optional.txt  requirements-termux.txt  (+12 more)
.github/: labeler.yml
.github/instructions/: architect-sage.instructions.md
.github/workflows/: auto-label.yml  ci-lint.yml  ci.yml  copilot-setup-steps.yml  deploy.yml  python-package.yml  release.yml  rust-ci.yml  scheduled-maintenance.yml  security.yml  system.yml
DL_SYSTEM/: main.py
DL_SYSTEM/agents/: __init__.py  task_agent.py  web_agent.py  web_agent_v2.py
DL_SYSTEM/core/: __init__.py  config_loader.py  logger.py  orchestrator.py  state_manager.py
DL_SYSTEM/integrations/: __init__.py  galxe.py  layer3.py
LICENSES/: LicenseRef-Proprietary.txt
agents/: __init__.py  watchdog_agent.py
contracts/: FlashLoanArbitrage.sol  NexusFlashReceiver.sol
contracts/interfaces/: IAaveV3Pool.sol  IBalancerVault.sol  ICurvePool.sol  IFlashLoanSimpleReceiver.sol  IUniswapV3Router.sol
core/: __init__.py  integrity.py  state_manager.py
dex-oracle/: Cargo.toml
dex-oracle/src/: cache.rs  config.rs  dex.rs  error.rs  main.rs  routes.rs
engine/: __init__.py  market_data.py  portfolio.py  portfolio.pyx  price_cache.py  resilient_price_engine.py  risk_manager.py  risk_manager.pyx
engine/arbitrage/: __init__.py  arbitrage_scanner.py
engine/compiler/: __init__.py  calldata_builder.py  contract_registry.py  solidity_engine.py
engine/dex/: __init__.py  liquidity_monitor.py  sushiswap.py  uniswap_v3.py
engine/execution/: __init__.py  executor.py  swap_executor.py  web3_executor.py
engine/mainnet/: __init__.py  alchemy_client.py  transaction_manager.py
engine/strategies/: __init__.py  mean_reversion.py  mean_reversion.pyx
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
hinsdale/: hinsdale.py
hinsdale/src/: cfg.rs  decompiler.rs  defi.rs  disasm.rs  ffi.rs  main.rs  mev.rs  opcodes.rs  security.rs  signatures.rs  symbolic.rs  types.rs
hotswap/: __init__.py  controller.py  loader.py
intelligence/: __init__.py  autonomy.py  memory.py  swarm_orchestrator.py  trading_agent.py
kernel/: __init__.py  watchdog_kernel.py
nexus_arb/: __init__.py  bellman_ford.py  cma_es.py  flash_loan_executor.py  kalman_filter.py  per_replay.py  ppo_agent.py  regime_classifier.py  shapley_scorer.py  thompson_sampling.py
nexus_arb/algorithms/: __init__.py  bellman_ford.py  cma_es.py  ppo.py  thompson_sampling.py  ukf.py
nexus_arb/math/: __init__.py
scripts/: __init__.py  lint_alignment.py  merkle_lint.py
tests/: conftest.py  test_advanced.py  test_agents.py  test_api.py  test_compiler_engine.py  test_engine.py  test_flash_loan.py  test_flashloan_terminal.py  test_hinsdale.py  test_hotswap.py  test_mainnet.py  test_multi_agent.py  test_new_endpoints.py  test_nexus_arb.py  test_price_engine.py  test_smoke.py  test_swarm.py  test_system.py  test_watchdog.py
tx-engine/: Cargo.toml
tx-engine/src/: config.rs  error.rs  flash.rs  main.rs  routes.rs  signer.rs
vault/: __init__.py  wallet_config.py  wallet_manager.py
watchdog/: __init__.py  config.py  dashboard.py  event_bus.py  kernel.py  registry.py
watchdog/agents/: __init__.py  base.py  db_agent.py  file_agent.py  process_agent.py  (+3 more)
(+20 files in other folders)
