[package]
name        = "tx-engine"
version     = "1.0.0"
edition     = "2021"
description = "AUREON TX engine — fast EIP-1559 transaction signing and broadcasting via alloy-rs"
authors     = ["AUREON"]

[[bin]]
name = "tx-engine"
path = "src/main.rs"

[dependencies]
# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── HTTP server (Axum) ────────────────────────────────────────────────────────
axum          = { version = "0.7", features = ["macros"] }
tower-http    = { version = "0.5", features = ["cors", "trace"] }

# ── Ethereum (alloy) ─────────────────────────────────────────────────────────
alloy = { version = "1", features = [
    "providers",
    "reqwest",
    "signers",
    "signer-local",
    "network",
    "rpc-types",
    "consensus",
] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Configuration ─────────────────────────────────────────────────────────────
dotenv = "0.15"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── URL parsing ───────────────────────────────────────────────────────────────
url = "2"

# ── Hex ───────────────────────────────────────────────────────────────────────
hex = "0.4"

[profile.release]
opt-level    = 3
lto          = "fat"
codegen-units = 1
panic        = "abort"
strip        = true
